dual upstream l