@@ -1,7 +1,6 @@
 package com.intouch.cp.lb_aip_pidirect.service;
 
 import com.intouch.cp.lb_aip_pidirect.config.NginxConfig;
-import com.intouch.cp.lb_aip_pidirect.model.ServerConfiguration;
 import com.intouch.cp.lb_aip_pidirect.model.ServerInfo;
 import com.intouch.cp.lb_aip_pidirect.model.ServerMetrics;
 import com.intouch.cp.lb_aip_pidirect.model.WeightAllocation;
@@ -11,8 +10,13 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
+import java.util.Map;
+import java.util.stream.Collectors;
 
+/**
+ * Weight calculation with SEPARATE calculations for incoming and outgoing servers
+ * Each group is normalized to sum to 100 independently
+ */
 @Service
 @RequiredArgsConstructor
 @Slf4j
@@ -24,470 +28,252 @@ public class WeightCalculationService {
     private static final int MIN_WEIGHT = 1;
     private static final int MAX_WEIGHT = 100;
     private static final int DEFAULT_WEIGHT = 10;
+    private static final int TARGET_TOTAL = 100;
 
     /**
-     * Calculate weights for all servers (both incoming and outgoing)
+     * BACKWARD COMPATIBILITY: Calculate weights for all servers (combined)
+     * This method maintains compatibility with existing code
+     * Uses outgoing servers by default for backward compatibility
      */
     public List<WeightAllocation> calculateWeights(List<ServerMetrics> allMetrics) {
-        log.debug("Calculating weights for {} servers", allMetrics.size());
-
-        List<WeightAllocation> allocations = new ArrayList<>();
-
-        if (allMetrics.isEmpty()) {
-            return assignDefaultWeights();
-        }
-
-        List<ServerMetrics> enabledMetrics = allMetrics.stream()
-                .filter(metrics -> {
-                    Optional<ServerInfo> server = nginxConfig.getServerById(metrics.getServerId());
-                    return server.isPresent() && server.get().isEnabled();
-                })
-                .toList();
-
-        if (enabledMetrics.isEmpty()) {
-            log.warn("All servers are disabled. Using default weights.");
-            return assignDefaultWeights();
-        }
-
-        List<WeightScore> scores = new ArrayList<>();
-        for (ServerMetrics metrics : enabledMetrics) {
-            WeightScore score = calculateServerScore(metrics);
-            scores.add(score);
-            log.debug("Server {} - Instant: {}ms, EWMA: {}ms, Raw Score: {:.3f}",
-                    metrics.getServerId(),
-                    String.format("%.2f", metrics.getAvgResponseTimeMs()),
-                    String.format("%.2f", metrics.getEwmaLatencyMs()),
-                    score.getRawScore());
-        }
-
-        normalizeAndAssignWeights(scores, allocations);
-
-        for (ServerMetrics metrics : allMetrics) {
-            if (enabledMetrics.stream().noneMatch(m -> m.getServerId().equals(metrics.getServerId()))) {
-                Optional<ServerInfo> serverInfo = nginxConfig.getServerById(metrics.getServerId());
-                if (serverInfo.isPresent()) {
-                    WeightAllocation allocation = new WeightAllocation(
-                            metrics.getServerId(),
-                            serverInfo.get().getAddress(),
-                            0,
-                            0.0,
-                            "Server manually disabled"
-                    );
-                    allocations.add(allocation);
-                }
-            }
-        }
-
-        ensureMinimumTraffic(allocations);
-
-        // CRITICAL FIX: Apply fixed weights from configuration AFTER calculation
-        applyFixedWeights(allocations);
-
-        // NORMALIZATION: Ensure weights always sum to exactly 100
-        normalizeWeightsToTotal(allocations, 100);
-
-        log.info("Weight calculation completed. Active servers: {}",
-                allocations.stream().filter(WeightAllocation::isActive).count());
-
-        return allocations;
+        log.debug("calculateWeights() called - using outgoing servers for backward compatibility");
+        return calculateOutgoingWeights(allMetrics);
     }
 
     /**
-     * Calculate weights specifically for incoming servers
+     * Calculate weights for INCOMING servers only (normalized to 100)
      */
-    public List<WeightAllocation> calculateIncomingWeights(List<ServerMetrics> incomingMetrics) {
-        log.debug("Calculating weights for {} incoming servers", incomingMetrics.size());
-        return calculateWeightsForServerGroup(incomingMetrics, nginxConfig.getIncomingServers(), "incoming");
+    public List<WeightAllocation> calculateIncomingWeights(List<ServerMetrics> allMetrics) {
+        log.debug("Calculating weights for INCOMING servers");
+
+        List<String> incomingServerIds = nginxConfig.getIncomingServerIds();
+        List<ServerMetrics> incomingMetrics = allMetrics.stream()
+                .filter(m -> incomingServerIds.contains(m.getServerId()))
+                .collect(Collectors.toList());
+
+        List<WeightAllocation> weights = calculateWeightsForGroup(
+                incomingMetrics,
+                nginxConfig.getIncomingServers(),
+                "INCOMING"
+        );
+
+        log.info("INCOMING weights calculated: {} servers, total weight: {}",
+                weights.size(),
+                weights.stream().mapToInt(WeightAllocation::getWeight).sum());
+
+        return weights;
     }
 
     /**
-     * Calculate weights specifically for outgoing servers
+     * Calculate weights for OUTGOING servers only (normalized to 100)
      */
-    public List<WeightAllocation> calculateOutgoingWeights(List<ServerMetrics> outgoingMetrics) {
-        log.debug("Calculating weights for {} outgoing servers", outgoingMetrics.size());
-        return calculateWeightsForServerGroup(outgoingMetrics, nginxConfig.getOutgoingServers(), "outgoing");
+    public List<WeightAllocation> calculateOutgoingWeights(List<ServerMetrics> allMetrics) {
+        log.debug("Calculating weights for OUTGOING servers");
+
+        List<String> outgoingServerIds = nginxConfig.getOutgoingServerIds();
+        List<ServerMetrics> outgoingMetrics = allMetrics.stream()
+                .filter(m -> outgoingServerIds.contains(m.getServerId()))
+                .collect(Collectors.toList());
+
+        List<WeightAllocation> weights = calculateWeightsForGroup(
+                outgoingMetrics,
+                nginxConfig.getOutgoingServers(),
+                "OUTGOING"
+        );
+
+        log.info("OUTGOING weights calculated: {} servers, total weight: {}",
+                weights.size(),
+                weights.stream().mapToInt(WeightAllocation::getWeight).sum());
+
+        return weights;
     }
 
     /**
-     * Generic method to calculate weights for a specific server group
+     * Calculate weights for a specific group of servers
+     * Each group is normalized to sum to 100 independently
      */
-    private List<WeightAllocation> calculateWeightsForServerGroup(
+    private List<WeightAllocation> calculateWeightsForGroup(
             List<ServerMetrics> metrics,
             List<ServerInfo> servers,
             String groupName) {
 
-        log.debug("Calculating weights for {} {} servers", servers.size(), groupName);
-
         List<WeightAllocation> allocations = new ArrayList<>();
 
-        if (servers.isEmpty()) {
-            log.info("No {} servers configured", groupName);
-            return allocations;
-        }
-
         if (metrics.isEmpty()) {
-            log.warn("No metrics available for {} servers. Using default weights.", groupName);
-            return assignDefaultWeightsForServers(servers);
+            log.warn("{} group: No metrics available, using default weights", groupName);
+            return assignDefaultWeightsForGroup(servers, groupName);
         }
 
+        // Filter enabled servers
         List<ServerMetrics> enabledMetrics = metrics.stream()
                 .filter(m -> {
-                    Optional<ServerInfo> server = servers.stream()
-                            .filter(s -> s.getId().equals(m.getServerId()))
-                            .findFirst();
-                    return server.isPresent() && server.get().isEnabled();
+                    ServerInfo server = findServerInList(servers, m.getServerId());
+                    return server != null && server.isEnabled();
                 })
-                .toList();
+                .collect(Collectors.toList());
 
         if (enabledMetrics.isEmpty()) {
-            log.warn("All {} servers are disabled. Using default weights.", groupName);
-            return assignDefaultWeightsForServers(servers);
+            log.warn("{} group: All servers disabled, using default weights", groupName);
+            return assignDefaultWeightsForGroup(servers, groupName);
         }
 
+        // Calculate scores
         List<WeightScore> scores = new ArrayList<>();
         for (ServerMetrics m : enabledMetrics) {
             WeightScore score = calculateServerScore(m);
             scores.add(score);
-            log.debug("{} Server {} - Instant: {}ms, EWMA: {}ms, Raw Score: {:.3f}",
-                    groupName,
-                    m.getServerId(),
-                    String.format("%.2f", m.getAvgResponseTimeMs()),
-                    String.format("%.2f", m.getEwmaLatencyMs()),
-                    score.getRawScore());
         }
 
-        normalizeAndAssignWeights(scores, allocations);
+        // Normalize and assign weights
+        normalizeAndAssignWeights(scores, allocations, servers);
 
         // Add disabled servers with 0 weight
         for (ServerMetrics m : metrics) {
             if (enabledMetrics.stream().noneMatch(em -> em.getServerId().equals(m.getServerId()))) {
-                Optional<ServerInfo> serverInfo = servers.stream()
-                        .filter(s -> s.getId().equals(m.getServerId()))
-                        .findFirst();
-                if (serverInfo.isPresent()) {
-                    WeightAllocation allocation = new WeightAllocation(
+                ServerInfo serverInfo = findServerInList(servers, m.getServerId());
+                if (serverInfo != null) {
+                    allocations.add(new WeightAllocation(
                             m.getServerId(),
-                            serverInfo.get().getAddress(),
+                            serverInfo.getAddress(),
                             0,
                             0.0,
                             "Server manually disabled"
-                    );
-                    allocations.add(allocation);
+                    ));
                 }
             }
         }
 
         ensureMinimumTraffic(allocations);
         applyFixedWeights(allocations);
-        normalizeWeightsToTotal(allocations, 100);
+        normalizeWeightsToTotal(allocations, TARGET_TOTAL);
 
-        log.info("{} weight calculation completed. Active servers: {}",
+        log.debug("{} group: Weight calculation completed. Active: {}, Total weight: {}",
                 groupName,
-                allocations.stream().filter(WeightAllocation::isActive).count());
+                allocations.stream().filter(WeightAllocation::isActive).count(),
+                allocations.stream().mapToInt(WeightAllocation::getWeight).sum());
 
         return allocations;
     }
 
     /**
-     * Apply fixed weights from ServerConfiguration
-     * This method checks each server's configuration and overrides the calculated weight
-     * if a fixed weight is configured
+     * Find server in a specific list
      */
-    private void applyFixedWeights(List<WeightAllocation> allocations) {
-        for (WeightAllocation allocation : allocations) {
-            String serverId = allocation.getServerId();
-            Integer calculatedWeight = allocation.getWeight();
-
-            // Get the effective weight (will return fixed weight if configured, otherwise calculated weight)
-            Integer effectiveWeight = configService.getEffectiveWeight(serverId, calculatedWeight);
-
-            if (!effectiveWeight.equals(calculatedWeight)) {
-                // Weight was overridden by fixed weight configuration
-                allocation.setWeight(effectiveWeight);
-                allocation.setReason("Fixed weight: " + effectiveWeight + " (Dynamic would be: " + calculatedWeight + ")");
-                log.info("Server {} - Applied fixed weight: {} (calculated was: {})",
-                        serverId, effectiveWeight, calculatedWeight);
-            }
-        }
+    private ServerInfo findServerInList(List<ServerInfo> servers, String serverId) {
+        return servers.stream()
+                .filter(s -> s.getId().equals(serverId))
+                .findFirst()
+                .orElse(null);
     }
 
     /**
-     * Normalize weights to sum to exactly the target total (usually 100)
-     * This ensures proper percentage distribution in split_clients configuration
-     *
-     * Strategy:
-     * 1. Separate fixed-weight servers from dynamic-weight servers
-     * 2. Calculate remaining weight for dynamic servers = target - sum(fixed weights)
-     * 3. Distribute remaining weight proportionally among dynamic servers
-     * 4. Handle edge cases (fixed weights > target, all weights fixed, rounding)
+     * Calculate score for a single server
      */
-    private void normalizeWeightsToTotal(List<WeightAllocation> allocations, int targetTotal) {
-        // Filter active allocations only
-        List<WeightAllocation> activeAllocations = allocations.stream()
-                .filter(WeightAllocation::isActive)
-                .toList();
-
-        if (activeAllocations.isEmpty()) {
-            log.warn("No active allocations to normalize");
-            return;
-        }
-
-        // Separate fixed and dynamic weight allocations
-        List<WeightAllocation> fixedWeightAllocations = new ArrayList<>();
-        List<WeightAllocation> dynamicWeightAllocations = new ArrayList<>();
-
-        for (WeightAllocation allocation : activeAllocations) {
-            String serverId = allocation.getServerId();
-            var config = configService.getConfiguration(serverId);
-
-            if (config.isPresent() &&
-                    !config.get().getDynamicWeightEnabled() &&
-                    config.get().getFixedWeight() != null) {
-                fixedWeightAllocations.add(allocation);
-            } else {
-                dynamicWeightAllocations.add(allocation);
-            }
-        }
-
-        int totalFixedWeight = fixedWeightAllocations.stream()
-                .mapToInt(WeightAllocation::getWeight)
-                .sum();
-
-        log.debug("Normalizing weights: {} fixed ({} total), {} dynamic, target = {}",
-                fixedWeightAllocations.size(), totalFixedWeight,
-                dynamicWeightAllocations.size(), targetTotal);
-
-        // Case 1: Only fixed weights
-        if (dynamicWeightAllocations.isEmpty()) {
-            if (totalFixedWeight != targetTotal) {
-                log.warn("All weights are fixed but sum to {} instead of {}. " +
-                        "Normalizing proportionally.", totalFixedWeight, targetTotal);
-                normalizeProportionally(fixedWeightAllocations, targetTotal);
-            }
-            return;
-        }
-
-        // Case 2: Fixed weights exceed or equal target
-        if (totalFixedWeight >= targetTotal) {
-            log.warn("Fixed weights ({}) >= target ({}). Setting dynamic weights to 0 and " +
-                    "normalizing fixed weights.", totalFixedWeight, targetTotal);
-
-            // Set all dynamic weights to 0
-            for (WeightAllocation allocation : dynamicWeightAllocations) {
-                allocation.setWeight(0);
-                allocation.setReason(allocation.getReason() + " [Normalized to 0: fixed weights exceed capacity]");
-            }
-
-            // Normalize fixed weights to target
-            normalizeProportionally(fixedWeightAllocations, targetTotal);
-            return;
-        }
-
-        // Case 3: Normal case - distribute remaining weight among dynamic servers
-        int remainingWeight = targetTotal - totalFixedWeight;
-
-        int totalDynamicWeight = dynamicWeightAllocations.stream()
-                .mapToInt(WeightAllocation::getWeight)
-                .sum();
-
-        if (totalDynamicWeight == 0) {
-            // All dynamic servers have 0 weight - distribute equally
-            int weightPerServer = remainingWeight / dynamicWeightAllocations.size();
-            int remainder = remainingWeight % dynamicWeightAllocations.size();
-
-            for (int i = 0; i < dynamicWeightAllocations.size(); i++) {
-                WeightAllocation allocation = dynamicWeightAllocations.get(i);
-                int weight = weightPerServer + (i < remainder ? 1 : 0);
-                allocation.setWeight(weight);
-                allocation.setReason(allocation.getReason() +
-                        String.format(" [Normalized: %d/%d available]", weight, remainingWeight));
-            }
-        } else {
-            // Distribute proportionally based on current weights
-            double scaleFactor = (double) remainingWeight / totalDynamicWeight;
-            int assignedWeight = 0;
-
-            for (int i = 0; i < dynamicWeightAllocations.size(); i++) {
-                WeightAllocation allocation = dynamicWeightAllocations.get(i);
-                int originalWeight = allocation.getWeight();
-
-                // For the last server, assign remaining weight to avoid rounding errors
-                if (i == dynamicWeightAllocations.size() - 1) {
-                    int finalWeight = remainingWeight - assignedWeight;
-                    allocation.setWeight(Math.max(0, finalWeight));
-                    allocation.setReason(allocation.getReason() +
-                            String.format(" [Normalized: %d→%d]", originalWeight, allocation.getWeight()));
-                } else {
-                    int scaledWeight = (int) Math.round(originalWeight * scaleFactor);
-                    allocation.setWeight(scaledWeight);
-                    assignedWeight += scaledWeight;
-                    allocation.setReason(allocation.getReason() +
-                            String.format(" [Normalized: %d→%d]", originalWeight, scaledWeight));
-                }
-            }
-        }
-
-        // Final verification
-        int finalTotal = activeAllocations.stream()
-                .mapToInt(WeightAllocation::getWeight)
-                .sum();
-
-        log.info("Weight normalization complete: {} active servers, total weight = {} (target: {})",
-                activeAllocations.size(), finalTotal, targetTotal);
-
-        if (finalTotal != targetTotal) {
-            log.warn("Final weight total {} does not match target {}. Difference: {}",
-                    finalTotal, targetTotal, finalTotal - targetTotal);
-        }
-    }
-
-    /**
-     * Normalize a list of allocations proportionally to a target total
-     * Used when all weights are fixed or when fixed weights exceed capacity
-     */
-    private void normalizeProportionally(List<WeightAllocation> allocations, int targetTotal) {
-        int currentTotal = allocations.stream()
-                .mapToInt(WeightAllocation::getWeight)
-                .sum();
-
-        if (currentTotal == 0) {
-            // Distribute equally
-            int weightPerServer = targetTotal / allocations.size();
-            int remainder = targetTotal % allocations.size();
-
-            for (int i = 0; i < allocations.size(); i++) {
-                WeightAllocation allocation = allocations.get(i);
-                int weight = weightPerServer + (i < remainder ? 1 : 0);
-                allocation.setWeight(weight);
-                allocation.setReason("Equal distribution: " + weight);
-            }
-            return;
-        }
-
-        double scaleFactor = (double) targetTotal / currentTotal;
-        int assignedWeight = 0;
-
-        for (int i = 0; i < allocations.size(); i++) {
-            WeightAllocation allocation = allocations.get(i);
-            int originalWeight = allocation.getWeight();
-
-            // For the last server, assign remaining to avoid rounding errors
-            if (i == allocations.size() - 1) {
-                int finalWeight = targetTotal - assignedWeight;
-                allocation.setWeight(Math.max(1, finalWeight));
-                allocation.setReason(allocation.getReason() +
-                        String.format(" [Proportionally normalized: %d→%d]", originalWeight, allocation.getWeight()));
-            } else {
-                int scaledWeight = Math.max(1, (int) Math.round(originalWeight * scaleFactor));
-                allocation.setWeight(scaledWeight);
-                assignedWeight += scaledWeight;
-                allocation.setReason(allocation.getReason() +
-                        String.format(" [Proportionally normalized: %d→%d]", originalWeight, scaledWeight));
-            }
-        }
-    }
-
     private WeightScore calculateServerScore(ServerMetrics metrics) {
         if (!isMetricsValid(metrics)) {
             return new WeightScore(metrics.getServerId(), 0.0, "Invalid metrics");
         }
 
         NginxConfig.WeightFactors factors = nginxConfig.getWeightFactors();
-
         Double effectiveLatency = metrics.getEffectiveLatency();
 
         double responseTimeScore = calculateResponseTimeScore(effectiveLatency);
         double errorRateScore = calculateErrorRateScore(metrics.getErrorRatePercentage());
-        double successRateScore = calculateSuccessRateScore(metrics.getSuccessRatePercentage());
-        double timeoutScore = calculateTimeoutScore(metrics.getTimeoutRatePercentage());
+        double timeoutRateScore = calculateTimeoutRateScore(metrics.getTimeoutRatePercentage());
         double uptimeScore = calculateUptimeScore(metrics.getUptimePercentage());
-        double degradationScore = calculateDegradationScore(metrics.getDegradationScore());
+        double successRateScore = calculateSuccessRateScore(metrics.getSuccessRatePercentage());
+        double degradationScore = 1.0 - (metrics.getDegradationScore() != null ?
+                Math.min(metrics.getDegradationScore() / 1000.0, 1.0) : 0.0);
 
-        double rawScore = (responseTimeScore * factors.getResponseTime()) +
-                (errorRateScore * factors.getErrorRate()) +
-                (timeoutScore * factors.getTimeoutRate()) +
-                (uptimeScore * factors.getUptime()) +
-                (degradationScore * factors.getDegradation());
+        double compositeScore =
+                (responseTimeScore * factors.getResponseTime()) +
+                        (errorRateScore * factors.getErrorRate()) +
+                        (timeoutRateScore * factors.getTimeoutRate()) +
+                        (uptimeScore * factors.getUptime()) +
+                        (degradationScore * factors.getDegradation());
 
-        String reason = buildScoreReason(responseTimeScore, errorRateScore, timeoutScore,
+        String reason = buildScoreReason(responseTimeScore, errorRateScore, timeoutRateScore,
                 uptimeScore, degradationScore, successRateScore, effectiveLatency);
 
-        return new WeightScore(metrics.getServerId(), rawScore, reason);
+        return new WeightScore(metrics.getServerId(), compositeScore, reason);
     }
 
-    private double calculateResponseTimeScore(Double responseTimeMs) {
-        if (responseTimeMs == null || responseTimeMs <= 0) return 0.0;
-
-        if (responseTimeMs <= 200) return 1.0;
-        if (responseTimeMs <= 500) return 1.0 - ((responseTimeMs - 200) / 300) * 0.5;
-        if (responseTimeMs <= 1000) return 0.5 - ((responseTimeMs - 500) / 500) * 0.4;
-        return Math.max(0.0, 0.1 - ((responseTimeMs - 1000) / 2000) * 0.1);
+    private double calculateResponseTimeScore(Double latencyMs) {
+        if (latencyMs == null || latencyMs <= 0) return 0.5;
+        if (latencyMs <= 100) return 1.0;
+        if (latencyMs <= 200) return 0.9;
+        if (latencyMs <= 300) return 0.7;
+        if (latencyMs <= 500) return 0.5;
+        if (latencyMs <= 1000) return 0.3;
+        return 0.1;
     }
 
     private double calculateErrorRateScore(Double errorRate) {
-        if (errorRate == null) return 0.0;
-        if (errorRate <= 0) return 1.0;
-        if (errorRate >= 10) return 0.0;
-        return 1.0 - (errorRate / 10.0);
+        if (errorRate == null) return 0.5;
+        if (errorRate <= 0.5) return 1.0;
+        if (errorRate <= 1.0) return 0.9;
+        if (errorRate <= 2.0) return 0.7;
+        if (errorRate <= 5.0) return 0.5;
+        if (errorRate <= 10.0) return 0.3;
+        return 0.1;
     }
 
-    private double calculateSuccessRateScore(Double successRate) {
-        if (successRate == null) return 0.0;
-        if (successRate >= 100) return 1.0;
-        if (successRate <= 90) return 0.0;
-        return (successRate - 90.0) / 10.0;
-    }
-
-    private double calculateTimeoutScore(Double timeoutRate) {
-        if (timeoutRate == null) return 0.0;
-        if (timeoutRate <= 0) return 1.0;
-        if (timeoutRate >= 5) return 0.0;
-        return 1.0 - (timeoutRate / 5.0);
+    private double calculateTimeoutRateScore(Double timeoutRate) {
+        if (timeoutRate == null) return 0.5;
+        if (timeoutRate <= 0.1) return 1.0;
+        if (timeoutRate <= 0.5) return 0.9;
+        if (timeoutRate <= 1.0) return 0.7;
+        if (timeoutRate <= 2.0) return 0.5;
+        if (timeoutRate <= 5.0) return 0.3;
+        return 0.1;
     }
 
     private double calculateUptimeScore(Double uptime) {
-        if (uptime == null) return 0.0;
-        if (uptime >= 99.5) return 1.0;
-        if (uptime <= 90.0) return 0.0;
-        return (uptime - 90.0) / 9.5;
+        if (uptime == null) return 0.5;
+        if (uptime >= 99.9) return 1.0;
+        if (uptime >= 99.5) return 0.9;
+        if (uptime >= 99.0) return 0.8;
+        if (uptime >= 98.0) return 0.6;
+        if (uptime >= 95.0) return 0.4;
+        return 0.2;
     }
 
-    private double calculateDegradationScore(Double degradation) {
-        if (degradation == null) return 1.0;
-        if (degradation <= 0) return 1.0;
-        if (degradation >= 500) return 0.0;
-        return 1.0 - (degradation / 500.0);
+    private double calculateSuccessRateScore(Double successRate) {
+        if (successRate == null) return 0.5;
+        if (successRate >= 99.5) return 1.0;
+        if (successRate >= 99.0) return 0.9;
+        if (successRate >= 98.0) return 0.8;
+        if (successRate >= 95.0) return 0.6;
+        if (successRate >= 90.0) return 0.4;
+        return 0.2;
     }
 
-    private void normalizeAndAssignWeights(List<WeightScore> scores, List<WeightAllocation> allocations) {
+    private void normalizeAndAssignWeights(List<WeightScore> scores,
+                                           List<WeightAllocation> allocations,
+                                           List<ServerInfo> servers) {
         double totalScore = scores.stream().mapToDouble(WeightScore::getRawScore).sum();
 
         if (totalScore <= 0) {
-            assignDefaultWeights(scores, allocations);
+            assignDefaultWeights(scores, allocations, servers);
             return;
         }
 
         for (WeightScore score : scores) {
-            Optional<ServerInfo> serverInfo = nginxConfig.getServerById(score.getServerId());
-            if (!serverInfo.isPresent()) continue;
+            ServerInfo serverInfo = findServerInList(servers, score.getServerId());
+            if (serverInfo == null) continue;
 
             double normalizedScore = score.getRawScore() / totalScore;
             int weight = Math.max(MIN_WEIGHT, Math.min(MAX_WEIGHT,
                     (int) Math.round(normalizedScore * 100)));
 
-            if (score.getRawScore() < 0.1) {
-                weight = 0;
-            }
+            if (score.getRawScore() < 0.1) weight = 0;
 
-            WeightAllocation allocation = new WeightAllocation(
+            allocations.add(new WeightAllocation(
                     score.getServerId(),
-                    serverInfo.get().getAddress(),
+                    serverInfo.getAddress(),
                     weight,
                     score.getRawScore(),
                     score.getReason()
-            );
-
-            allocations.add(allocation);
+            ));
         }
     }
 
@@ -507,89 +293,42 @@ public class WeightCalculationService {
         }
     }
 
-    /**
-     * Assign default weights for all servers (incoming + outgoing)
-     */
-    private List<WeightAllocation> assignDefaultWeights() {
-        List<WeightAllocation> allocations = new ArrayList<>();
-
-        // Add incoming servers
-        for (ServerInfo server : nginxConfig.getIncomingServers()) {
-            WeightAllocation allocation = new WeightAllocation(
-                    server.getId(),
-                    server.getAddress(),
-                    DEFAULT_WEIGHT,
-                    0.5,
-                    "Default weight - no metrics available"
-            );
-            allocations.add(allocation);
-        }
-
-        // Add outgoing servers
-        for (ServerInfo server : nginxConfig.getOutgoingServers()) {
-            WeightAllocation allocation = new WeightAllocation(
-                    server.getId(),
-                    server.getAddress(),
-                    DEFAULT_WEIGHT,
-                    0.5,
-                    "Default weight - no metrics available"
-            );
-            allocations.add(allocation);
-        }
-
-        log.warn("No metrics available. Assigning default weights to {} servers (incoming + outgoing)",
-                allocations.size());
-
-        // Apply fixed weights even for default weights
-        applyFixedWeights(allocations);
-
-        // Normalize to ensure sum is 100
-        normalizeWeightsToTotal(allocations, 100);
-
-        return allocations;
-    }
-
-    /**
-     * Assign default weights for a specific list of servers
-     */
-    private List<WeightAllocation> assignDefaultWeightsForServers(List<ServerInfo> servers) {
+    private List<WeightAllocation> assignDefaultWeightsForGroup(List<ServerInfo> servers, String groupName) {
         List<WeightAllocation> allocations = new ArrayList<>();
 
         for (ServerInfo server : servers) {
-            WeightAllocation allocation = new WeightAllocation(
+            allocations.add(new WeightAllocation(
                     server.getId(),
                     server.getAddress(),
                     DEFAULT_WEIGHT,
                     0.5,
                     "Default weight - no metrics available"
-            );
-            allocations.add(allocation);
+            ));
         }
 
-        log.warn("No metrics available. Assigning default weights to {} servers", allocations.size());
+        log.warn("{} group: No metrics available. Assigning default weights to {} servers",
+                groupName, allocations.size());
 
-        // Apply fixed weights even for default weights
         applyFixedWeights(allocations);
-
-        // Normalize to ensure sum is 100
-        normalizeWeightsToTotal(allocations, 100);
+        normalizeWeightsToTotal(allocations, TARGET_TOTAL);
 
         return allocations;
     }
 
-    private void assignDefaultWeights(List<WeightScore> scores, List<WeightAllocation> allocations) {
+    private void assignDefaultWeights(List<WeightScore> scores,
+                                      List<WeightAllocation> allocations,
+                                      List<ServerInfo> servers) {
         for (WeightScore score : scores) {
-            Optional<ServerInfo> serverInfo = nginxConfig.getServerById(score.getServerId());
-            if (!serverInfo.isPresent()) continue;
+            ServerInfo serverInfo = findServerInList(servers, score.getServerId());
+            if (serverInfo == null) continue;
 
-            WeightAllocation allocation = new WeightAllocation(
+            allocations.add(new WeightAllocation(
                     score.getServerId(),
-                    serverInfo.get().getAddress(),
+                    serverInfo.getAddress(),
                     DEFAULT_WEIGHT,
                     score.getRawScore(),
                     "Default weight - all servers unhealthy"
-            );
-            allocations.add(allocation);
+            ));
         }
     }
 
@@ -608,6 +347,59 @@ public class WeightCalculationService {
         return String.format("EWMA:%.1fms SR:%.2f RT:%.2f ER:%.2f TO:%.2f UP:%.2f DEG:%.2f",
                 effectiveLatency != null ? effectiveLatency : 0.0,
                 successRate, responseTime, errorRate, timeout, uptime, degradation);
+    }
+
+    private void applyFixedWeights(List<WeightAllocation> allocations) {
+        for (WeightAllocation allocation : allocations) {
+            String serverId = allocation.getServerId();
+            Integer calculatedWeight = allocation.getWeight();
+            Integer effectiveWeight = configService.getEffectiveWeight(serverId, calculatedWeight);
+
+            if (!effectiveWeight.equals(calculatedWeight)) {
+                allocation.setWeight(effectiveWeight);
+                allocation.setReason("Fixed weight: " + effectiveWeight + " (Dynamic: " + calculatedWeight + ")");
+                log.info("Server {} - Applied fixed weight: {} (calculated: {})",
+                        serverId, effectiveWeight, calculatedWeight);
+            }
+        }
+    }
+
+    /**
+     * CRITICAL: Normalize weights to sum to exactly TARGET_TOTAL (100)
+     * This ensures each group independently sums to 100
+     */
+    private void normalizeWeightsToTotal(List<WeightAllocation> allocations, int targetTotal) {
+        if (allocations.isEmpty()) return;
+
+        int currentTotal = allocations.stream().mapToInt(WeightAllocation::getWeight).sum();
+
+        if (currentTotal == 0) {
+            for (WeightAllocation allocation : allocations) {
+                int weight = Math.max(targetTotal / allocations.size(), 1);
+                allocation.setWeight(weight);
+                allocation.setReason("Equal distribution: " + weight);
+            }
+            return;
+        }
+
+        double scaleFactor = (double) targetTotal / currentTotal;
+        int assignedWeight = 0;
+
+        for (int i = 0; i < allocations.size(); i++) {
+            WeightAllocation allocation = allocations.get(i);
+            int originalWeight = allocation.getWeight();
+
+            if (i == allocations.size() - 1) {
+                int finalWeight = targetTotal - assignedWeight;
+                allocation.setWeight(Math.max(1, finalWeight));
+            } else {
+                int scaledWeight = Math.max(1, (int) Math.round(originalWeight * scaleFactor));
+                allocation.setWeight(scaledWeight);
+                assignedWeight += scaledWeight;
+            }
+        }
+
+        log.debug("Normalized weights to total: {} (was: {})", targetTotal, currentTotal);
     }
 
     private static class WeightScore {
